@@ -1,0 +1,1 @@
+ENABLE_SPA_OVER_HTTP        Y;
